my_site/static/css/style.css
*{
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body{
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size:1rem;
    font-weight:normal;
    line-height:1.5;
    color:#333;
    overflow-x:hidden;
    background: #fffdf9;
}

a {
    text-decoration: none;
    color: #fff;
}

h2 {
    padding-bottom: 20px;
}

.v-header{
    height:100vh;
    display:flex;
    align-items:center;
    color:#fff;
}

.container{
    max-width:1440px;
    padding-left:1rem;
    padding-right:1rem;
    margin:auto;
    text-align:center;
    justify-content: center;
}

.nav {
    width: auto;
    position: absolute;
    z-index: 2;
}

.nav ul{
    font-size: 20px;
    display: flex;
    text-align: center;
}

.nav ul li {
    list-style: none;
    width: 100px;
    height: 40px;
    bottom: 10px;
    transition: 0.4s, color 0.4s;
}

.nav ul li a {
    color: #fffdf98e;
    transition: 0.4s, color 0.4s;
}

.nav ul li a:hover {
    color: #fff;
    transition: 0.4s, color 0.4s;
}



.fullscreen-video-wrap{
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100vh;
    overflow:hidden;
}

.fullscreen-video-wrap video{
    min-height:100%;
    min-width:100%;
}

.header-overlay{
    height:100vh;
    position: absolute;
    top:0;
    left:0;
    width:100vw;
    z-index:1;
    background: rgba(0, 0, 0, 0.65);
}

.header-content{
    z-index:2;
}

.header-content h1{
    font-size:50px;
    margin-bottom:0;
}

.header-content p{
    font-size:1.5rem;
    display:block;
    padding-bottom:2rem;
}

.btn{
    background: rgba(112, 112, 112, 0.23);
    color:#fff;
    font-size:1.2rem;
    padding: 1rem 2rem;
    text-decoration: none;
    cursor: pointer;
    transition: background-color 0.2s, color 0.2s;
}

.btn:hover {
    background: rgba(221, 221, 221, 0.801);
    color: black;
}

.section{
    padding:20px 0;
}

.section-get-in-touch, .section-footer{
    color:#fff;
}

.section-get-in-touch {
    background:#333;
}

.section-footer {
    background:#222;
}

.get-in-touch:hover {
    color: rgba(221, 221, 221, 0.87);
    transition: background-color 0.2s, color 0.2s;
}

/* Projects Section */

.card {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    grid-gap: 40px;
}

.card-content {
    display: flex;
    flex-direction: column;
}

.btn-card, .card-content p, .card-content ul{
    margin: 2px 0;
    background: rgba(36, 36, 36, 0.4); 
}

.card-content p {
    padding: 10px;
    color: #fff;
    text-align: left;
}

.card-content ul  {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
    padding: 0;
    color: #fff;
}

.card-img {
    max-width: 850px;
    margin: 2px auto;
    width: 100%;
    height: 100%;
    mix-blend-mode: multiply;
    filter: grayscale(100%) contrast(1) brightness(90%);
    transition: filter 0.4s, color 0.4s;
}

.card-img:hover {
    box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -15px;
    filter: none;
    transition: filter 0.4s, color 0.4s;
}

.footer {
    display: flex;
    justify-content: space-evenly;
    list-style: none;
    padding: 0;
    color: #fff;
}

.contact {
    position: fixed;
    width: 150px;
    height: 50px;
    border: 1px solid #fff;
    background: rgba(36, 36, 36, 0.4);
    bottom: 10px;
    right: 10px;
    z-index: 2;
    text-decoration: none;
    text-align: center;
    line-height: 50px;
    color: #fff;    
    transition: 0.4s, color 0.4s;
}

.contact:hover {
    box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -15px;
    background: #fffdf9;
    color: #000; 
    transition: 0.4s, color 0.4s;
}


@media(max-width:960px){
    .container{
        padding-right:3rem;
        padding-left:3rem;
    }

    .card {
        display: grid;
        grid-template-columns: 1fr;
        justify-items: center;
        grid-gap: 40px;
    }

    .contact {
        display: none;
    }
    
}


@media(max-width:460px) {
    .nav ul{
        font-size: 16px;
    }

    .nav ul li {
        width: 70px;
        height: 20px;
    }

    .header-content h1{
        font-size:30px;
    }

    .header-content p {
        font-size: 1rem;
    }
}


@media(max-width:400px) {
    .nav ul{
        font-size: 14px;
    }
}

